# Rodentia

./: README.md  Rodentia.ipynb  pyproject.toml
notes/: example-coco-2.json  example-coco.json
