[tool.poetry]
name = "rodentia"
version = "0.1.0"
description = ""
authors = ["nate johnson <nate@biobright.com>"]

[tool.poetry.dependencies]
python = "^3.7"
pybgs = "*"
jupyter = "*"
opencv-python = "*"
pandas = "^1.0.3"
black = "^19.10b0"
blackcellmagic = "^0.0.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
